--- a/BeFourAfter/src/main/webapp/resources/css/styles.css
+++ b/BeFourAfter/src/main/webapp/resources/css/styles.css
@@ -11,8 +11,9 @@ body {
 /** h1 가운데 정렬*/
 h1 {
   text-align: center;
+  margin-top: 10px;
 }
-aq
+
 /** .accordion 사이즈 탑,바텀 마진 90px 나머지 자동
     글자색 검정 배경색 흰색 패딩 45px 45px
 */
@@ -28,7 +29,6 @@ aq
 .accordion .container {
     position: relative;
     margin: 10px 10px;
-    
   }
     /** 
       .accordion에 있는 .label 포지션을 .container에 맞춰 상대적으로 정리
@@ -59,9 +59,9 @@ aq
     position: relative;
     background: white;
     height: 0;
-    font-size: 17px;
+    font-size: 15px;
     text-align: justify;
-    width: auto;
+    width: 780px;
     overflow: hidden; 
     transition: 1s;
   }
@@ -73,10 +73,11 @@ aq
     border: 1px solid grey;
   }
 
-  /* 실행시 보이기 */
-.accordion .container.active #q1 {
+ /* 실행시 보이기 */
+ .accordion .container.active #q1 {
   height: 110px;
   transition: 1s;
+  
 }
 .accordion .container.active #q2{
   height: 210px;
